--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -130,8 +130,10 @@ a:focus-visible {
 }
 
 .card-actions {
+  display: flex;
   padding: 1rem;
   text-align: center;
+  justify-content: center;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
 }
@@ -147,6 +149,10 @@ a:focus-visible {
 
 .card-actions .bid-button:hover {
   background-color: #e7a07f;
+}
+
+.card-actions .delete-button {
+  margin: auto 1rem;
 }
 
 /* View All Button */
@@ -473,4 +479,44 @@ a:focus-visible {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+
+/* NEW STYLING FOR ADD ITEM FORM */
+.add-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f9f9f9;
+  padding: 2rem;
+}
+
+.add-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 12px; /* Match the border-radius with the card style */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.add-form .button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #cc6b58;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.add-form .button:hover {
+  background-color: #e7a07f;
 }
