--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,4 @@
-/* CSS RESET */
+/* General Reset */
 *,
 *::before,
 *::after {
@@ -65,7 +65,7 @@ a {
 }
 
 main {
-  flex: 1; /* This makes the main content area grow to fill available space */
+  flex: 1;
 }
 
 html {
@@ -155,7 +155,6 @@ a:focus-visible {
   margin: auto 1rem;
 }
 
-/* View All Button */
 .view-all-button {
   display: inline-block;
   padding: 0.75rem 1.5rem;
@@ -164,7 +163,7 @@ a:focus-visible {
   border-radius: 6px;
   border: none;
   cursor: pointer;
-  margin-left: 1rem; /* Add some margin to separate from the Login button */
+  margin-left: 1rem;
   transition: background-color 0.3s ease;
 }
 
@@ -177,7 +176,7 @@ a:focus-visible {
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2rem;
   max-width: 1200px;
-  margin: 2rem auto; /* Add margin to ensure spacing at the bottom */
+  margin: 2rem auto;
   padding: 2rem;
 }
 
@@ -188,7 +187,7 @@ a:focus-visible {
   height: 5rem;
   padding: 0 1rem;
   background-color: #cc6b58;
-  position: relative; /* Add this to enable absolute positioning of site-title */
+  position: relative;
 }
 
 .site-logo {
@@ -196,9 +195,9 @@ a:focus-visible {
 }
 
 .site-title {
-  position: absolute; /* Make it absolute */
-  left: 50%; /* Center horizontally */
-  transform: translateX(-50%); /* Adjust to center exactly */
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   margin: 0;
 }
 
@@ -220,6 +219,32 @@ a:focus-visible {
   background-color: #f4c6aa;
 }
 
+.join-auction-button{
+  color: white;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  background-color: #cc6b58;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.join-auction-button:hover {
+  background-color: black;
+}
+
+.logout-button {
+  color: #e7a07f;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  background-color: black;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: #f4c6aa;
+}
+
 .totalSales {
   padding-inline: 1rem;
   background-color: #e7a07f;
@@ -229,10 +254,10 @@ a:focus-visible {
 
 .hero {
   width: 100%;
-  height: 200px; 
+  height: 200px;
   overflow: hidden;
-  border-radius: 12px; /* Adding rounded corners to match the card style */
-  margin-bottom: 2rem; /* Adding margin to separate from other elements */
+  border-radius: 12px;
+  margin-bottom: 2rem;
 }
 
 .hero img {
@@ -246,12 +271,23 @@ a:focus-visible {
   justify-content: center;
   align-items: center;
   height: calc(100vh - 5rem);
-  background: #f9f9f9; /* Updated background */
-  padding: 2rem; /* Add padding for better spacing */
-  margin-top: -300px; /* Adjust the margin to pull the login form closer to the hero section */
+  background: #f9f9f9;
+  padding: 2rem;
+  margin-top: -250px;
 }
 
-.login-form {
+.add-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 5rem);
+  background: #f9f9f9;
+  padding: 2rem;
+  margin-top: -49px;
+}
+
+.login-form,
+.add-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -260,22 +296,25 @@ a:focus-visible {
   max-width: 400px;
   padding: 2rem;
   background-color: white;
-  border-radius: 12px; /* Match the border-radius with the card style */
+  border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
+.add-form h3,
 .login-form h2 {
   margin-bottom: 1.5rem;
   color: #333;
 }
 
+.add-form .formGroup,
 .login-form .formGroup {
   width: 100%;
   margin-bottom: 1.5rem;
 }
 
-.login-form .label {
+.add-form label,
+.login-form label {
   display: block;
   margin-bottom: 0.5rem;
   font-weight: bold;
@@ -284,7 +323,8 @@ a:focus-visible {
   color: #333;
 }
 
-.login-form .input {
+.add-form input,
+.login-form input {
   width: 100%;
   padding: 0.75rem;
   border: 1px solid #ddd;
@@ -292,13 +332,16 @@ a:focus-visible {
   font-size: 1rem;
 }
 
-.login-form .input:focus {
+.add-form input:focus,
+.login-form input:focus {
   outline: none;
   border-color: #cc6b58;
 }
 
+.add-form .button,
 .login-form .button {
   width: 100%;
+  margin: 0.5rem;
   padding: 0.75rem;
   background-color: #cc6b58;
   color: white;
@@ -309,6 +352,7 @@ a:focus-visible {
   transition: background-color 0.3s ease;
 }
 
+.add-form .button:hover,
 .login-form .button:hover {
   background-color: #e7a07f;
 }
@@ -318,11 +362,13 @@ a:focus-visible {
   text-align: center;
 }
 
+/* Footer styles */
 .footer-container {
   background-color: #333;
   color: white;
   padding: 1rem;
   text-align: center;
+  margin-top: auto;
 }
 
 .footer-content {
@@ -369,14 +415,14 @@ a:focus-visible {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; /* Center the team section */
+  justify-content: center;
   background-color: #ffffff;
   border-radius: 12px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   padding: 2rem;
   max-width: 800px;
   text-align: center;
-  margin: 2rem auto; /* Center the section horizontally */
+  margin: 2rem auto;
 }
 
 .team-section h1 {
@@ -387,7 +433,7 @@ a:focus-visible {
 
 .team-members {
   display: flex;
-  justify-content: center; /* Center the team members */
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -418,11 +464,13 @@ a:focus-visible {
 .progress-bar-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .progress-bar-container p {
   margin-bottom: 0.5rem;
+  padding-top: 5px;
+  text-align: center;
 }
 
 .progress-bar-container NavLink {
@@ -442,12 +490,11 @@ a:focus-visible {
   background-color: #cc6b58;
 }
 
-/* Modal */
 .modal {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute; /* Change to absolute */
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -482,7 +529,6 @@ a:focus-visible {
 }
 
 
-/* NEW STYLING FOR ADD ITEM FORM */
 .add-form-container {
   display: flex;
   justify-content: center;
@@ -500,9 +546,34 @@ a:focus-visible {
   max-width: 400px;
   padding: 2rem;
   background-color: white;
-  border-radius: 12px; /* Match the border-radius with the card style */
+  border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
+}
+
+.add-form .formGroup {
+  width: 100%;
+  margin-bottom: 1.5rem;
+}
+
+.add-form .formGroup label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.add-form .formGroup input {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.add-form .formGroup input:focus {
+  outline: none;
+  border-color: #cc6b58;
 }
 
 .add-form .button {
