--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -153,6 +153,7 @@ a:focus-visible {
 
 .card-actions .delete-button {
   margin: auto 1rem;
+  border-radius: 6px;
 }
 
 .view-all-button {
@@ -195,10 +196,11 @@ a:focus-visible {
 }
 
 .site-title {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  margin: 0;
+  margin: 0; */
+  margin-right: auto;
 }
 
 .header-links {
@@ -236,9 +238,10 @@ a:focus-visible {
   color: #e7a07f;
   font-weight: bold;
   padding: 0.5rem 1rem;
-  background-color: black;
+  background-color: #555;
   border-radius: 4px;
   transition: background-color 0.3s ease;
+  border: none;
 }
 
 .logout-button:hover {
@@ -253,27 +256,29 @@ a:focus-visible {
 }
 
 .hero {
-  width: 100%;
+  margin: 1rem;
+  /* width: 100%; */
   height: 200px;
   overflow: hidden;
   border-radius: 12px;
   margin-bottom: 2rem;
+  background-color: #C57C59;
 }
 
 .hero img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .login-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 5rem);
+  /* height: calc(100vh - 5rem); */
   background: #f9f9f9;
   padding: 2rem;
-  margin-top: -250px;
+  /* margin-top: -250px; */
 }
 
 .add-form-container {
@@ -433,13 +438,16 @@ a:focus-visible {
 
 .team-members {
   display: flex;
+  /* flex-direction: row;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
 }
 
 .team-member {
   margin: 1rem;
+  display: grid;
   text-align: center;
+  justify-items: center;
 }
 
 .team-photo {
