--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -450,6 +450,14 @@ a:focus-visible {
   margin: 2rem auto;
 }
 
+.remaining-time {
+  background-color:crimson;
+  padding: 0.2rem 0.5rem;
+  border-radius: 6px;
+  color: #ffffff;
+  margin-bottom: 1rem;
+}
+
 .team-section h1 {
   font-size: 2rem;
   margin-bottom: 1rem;
